added swagger docs for teacher with user
